data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_170.wast
;; Sure, here are 10 unique differential tests related to Incorrect Branch Target Resolution for the `loop` instruction:  1. **Nested Loop with Conditional Branch**:    - Description: Create a nested loop structure with an inner loop containing a `br_if` targeting the outer loop. The condition should sometimes result in a branch, testing whether the outer loop is correctly identified as the target.    - Reasoning: Tests the proper handling and resolution of branch targets in nested loop structures.

(assert_invalid
  (module
    (func $test
      (block $outer
        (loop $inner
          (br $outer)
        )
      )
    )
  )
  "unknown label"
)